# freddi

./: .gitignore  .travis.yml  CMakeLists.txt  CNAME  Dockerfile  Dockerfile.python  MANIFEST.in  Makefile  Readme  Readme.md  Readme_template.md  arguments.cpp  arguments.hpp  chen_mean.py  cmake-build  constants.hpp  fred.cpp  fred.py  freddi  freddi.cpp  freddi.hpp  freddi.ini  fredlib.py  main.cpp  nonlinear_diffusion.cpp  nonlinear_diffusion.hpp  opacity_related.cpp  opacity_related.hpp  opt.ipynb  orbit.cpp  orbit.hpp  output.cpp  output.hpp  pyproject.toml  setup.py  spectrum.cpp  spectrum.hpp  unit_transfomation.hpp
.ci/: Dockerfile-test-wheels  install-boost.sh  update-help-readme.py
.ci/cpp_on_linux/: Dockerfile
.ci/cpython_on_linux/: Dockerfile
.github/workflows/: main.yml
cpp/: arguments.cpp  arguments.hpp  constants.hpp  main-ns.cpp  main.cpp  nonlinear_diffusion.cpp  opacity_related.cpp  orbit.cpp  output.hpp
cpp/include/: application.hpp  arguments.hpp  constants.hpp  exceptions.hpp  freddi.hpp  freddi_evolution.hpp  freddi_state.hpp  freddi_state.hpp~  geometry.hpp  nonlinear_diffusion.hpp  opacity_related.hpp  options.hpp  orbit.hpp  output.hpp  passband.hpp  rochelobe.hpp  spectrum.hpp  star.hpp  unit_transformation.hpp  util.hpp
cpp/include/ns/: ns_arguments.hpp  ns_evolution.hpp  ns_options.hpp  ns_output.hpp
cpp/pywrap/: arguments.cpp  arguments.hpp  converters.cpp  converters.hpp  freddi_evolution.cpp  freddi_evolution.hpp  freddi_state.cpp  module.cpp  pywrap_arguments.cpp  pywrap_arguments.hpp  pywrap_freddi_evolution.cpp  pywrap_freddi_state.cpp  pywrap_freddi_state.hpp  util.hpp
cpp/src/: arguments.cpp  freddi.cpp  freddi_evolution.cpp  freddi_state.cpp  geometry.cpp  nonlinear_diffusion.cpp  opacity_related.cpp  options.cpp  orbit.cpp  output.cpp  passband.cpp  rochelobe.cpp  spectrum.cpp  star.cpp  util.cpp
cpp/src/ns/: ns_arguments.cpp  ns_evolution.cpp  ns_evolution.cpp~  ns_options.cpp  ns_output.cpp
cpp/test/: geometry.cpp  rochelobe.cpp  star.cpp  util.cpp
cython/: freddi.cpp  freddi.pxd  freddi.pyx
freddi/: args.cpp  args.pyx  evolution_result.py  freddi.pxd  freddi.pyx
python/freddi/: __init__.py  evolution_result.py
python/test/: analytical.py  freddi.py  neutron_star.py  regression.py  test_analytical.py  test_freddi.py  test_ns.py  test_regression.py  test_util.py
python/test/data/: freddi.ini  generate_test_data.sh
src/: arguments.cpp  arguments.hpp  freddi.cpp  freddi.hpp  main.cpp  output.cpp  output.hpp  spectrum.cpp
test/: .gitignore  analytical.py  freddi.py  regression.py
